# boccia-bci

./: .gitignore  README.md
Boccia-Python/: environment.yml  headset_sim.py  main.py  pyproject.toml  send_label.py
Boccia-Unity/Assets/: Boccia Balls.fbx  Simplified Ramp Model v9.fbx  SpawnArea.cs
Boccia-Unity/Assets/Boccia/BCI/: BCITargetAnimations.cs  CoarseFanSettings.asset  ColourFlashStimulusEffect.cs  CustomP300ControllerBehavior.cs  Fan Prefab.prefab  FanClicker.cs  FanGenerator.cs  FanInteractions.cs  FanNamespace.cs  FanPresenter.cs  FanSegmentIdentifier.cs  FanSettings  FineFanSettings.asset  FlashingSPOButtonManager.cs  LSLMonitor.cs  P300SettingsAdapter.cs  PlayModeLSLStream.cs  RampControlFan.prefab  SettingsExporter.cs  TargetElementLSLStream.cs
Boccia-Unity/Assets/Boccia/Model/: BocciaData.cs  BocciaModel.cs  BocciaTypes.cs  HardwareRamp.cs  ISerialController.cs  RampController.cs  SerialController.cs  SimulatedRamp.cs
Boccia-Unity/Assets/Boccia/Persistence/: LocalRepository.cs  SaveLoadManager.cs
Boccia-Unity/Assets/Materials/: Aluminium.mat  Ball Material.mat  Black 3D Filament.mat  Blue 3D Filament.mat  Clear Plastic.mat  Rubber.mat  Steel.mat  UI Control Fan.mat  Wood.mat  streaky-plywood_albedo.mat
Boccia-Unity/Assets/Models/: tail cylinder.fbx
Boccia-Unity/Assets/Prefabs/: Large Boccia Ball.prefab
Boccia-Unity/Assets/Scenes/: Boccia Scene.unity  Demo Fan Scene 1.unity  Demo Scene.unity  SampleScene.unity
Boccia-Unity/Assets/Shaders/: Cylinder Tail.shadergraph
Boccia-Unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+76 files in other folders)
